--- a/docs/content/introduction.mdx
+++ b/docs/content/introduction.mdx
@@ -6,7 +6,7 @@ metaDescription: 'How to get up and running with Discordeno helper'
 
 # Prerequisites
 
-I assume you have some knowledge of javascript and typescript and Deno installed. If not, here are some resources to get you started
+I assume you have some knowledge of javascript and typescript, Deno installed and a Github account. If not, here are some resources to get you started
 
 - [Official TypeScript Documentation](https://www.typescriptlang.org/docs/home.html)
 - [JavaScript Documentation from Devdocs](https://devdocs.io/javascript/)
@@ -19,7 +19,6 @@ I assume you have some knowledge of javascript and typescript and Deno installed
 
 Discordeno Helper is very easy to get started with. There are 7 steps
 
-1. Create github account
 2. Go to the [Template Github](https://github.com/Suyashtnt/discordeno-helper-template)
 3. Click "Use this template"
 4. Fill out the prompts
