--- a/docs/content/step-by-step/4-getting-the-bot-to-start-up.mdx
+++ b/docs/content/step-by-step/4-getting-the-bot-to-start-up.mdx
@@ -150,7 +150,7 @@ To install(as of 12 Oct 2020) run this in cmd:
 deno install -qAf --unstable https://deno.land/x/denon@2.4.4/denon.ts
 ```
 
-this install denon, you should beable to run `denon --help` and not get an error. Now, lets start!
+this install denon, you should now be able to run `denon --help` and not get an error. Now, lets start!
 
 In VSC, you can press `` Ctrl + ` ``(the key underneath the Escape key) or `F1 -> Toggle integrated terminal` to see a terminal pop up in the directory of your bot. In there, run `denon start`
 
